# ManifoldLearning

./: CMakeLists.txt  floydmarshall.cpp  floydmarshall.h  isomap.cpp  isomap.h  main.cpp  main2.cpp  main2.h  pca.cpp  pca.h  utils.cpp  utils.h
